[project]
name = "netatmo-client-influx"
version = "3.7.0"
description = "A basic crawler for netatmo api"
authors = [
    { name = "Dennis Bernardy", email = "dennis@ethernerd.net" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyatmo>=7.6,<8",
    "influxdb-client>=1,<2",
    "aiohttp>=3.10.11",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"
