[project]
name = "netatmo-client-influx"
version = "3.8.0"
description = "A basic crawler for netatmo api"
authors = [
    { name = "Dennis Bernardy", email = "dennis@ethernerd.net" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests",
    "influxdb-client>=1,<2",
    "pyyaml",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"
